# BlueOS-Ntrip-extension

./: Dockerfile  README.md  requirements.txt
.github/workflows/: deploy.yml
app/: main.py  pyproject.toml  pyvenv.cfg  rtk_config.json
app/static/: index.html
static/: index.html  register_service
