[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueos-rtk-extension"
version = "1.0.0"
description = "BlueOS RTK NTRIP Extension for high-precision positioning"
dependencies = [
    "requests",
    "litestar[standard]",
    "pydantic",
    "aiohttp",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["static/*", "static/**/*"]

[tool.setuptools.packages.find]
exclude = ["config*", "logs*", "build*", ".venv*", "*.egg-info*"]

